# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  analize_content.py  cli.py  content_actions.py  download.py  filesystem_actions.py  fs.py  html.py  html_parsing.py  logger.py  naming.py  parser.py  render_names.py
page_loader/scripts/: pageloader.py
pageloader/: __init__.py  analize_content.py  cli.py  content_actions.py  download.py  download_childrens.py  logger.py  parser.py
pageloader/scripts/: pageloader.py
tests/: conftest.py  test_download.py  test_download_files_correct.py  test_exceptions.py  test_logging.py  test_make_request.py  test_naming_download.py  test_output_file_content.py  test_output_name.py  test_output_names.py
tests/fixtures/: simple.html  simple_without_links.html  with_image_link.html  with_inner_links.html
tests/fixtures/subfiles/: script.js
tests_old/: conftest.py  test_exceptions.py  test_output_file_content.py
tests_old/fixtures/: css.css  with_image_link.html  with_other_link.html  with_subdomain_image_link.html
